# sensord

./: .gitignore  CMakeLists.txt  sensor.conf
conf/: auto_rotation.conf
include/: external_sensor.h  fusion_sensor.h  physical_sensor.h  sensor_hal_types.h  sensor_internal.h  sensor_internal_deprecated.h  sensor_types.h
packaging/: sensord.service  sensord.socket  sensord.spec
src/client/: CMakeLists.txt  client.cpp  client_common.cpp  client_common.h  client_dummy.cpp  command_channel.cpp  command_channel.h  external_client_dummy.cpp  sensor_callback_deliverer.cpp  sensor_callback_deliverer.h  sensor_client_info.cpp  sensor_client_info.h  sensor_event_listener.cpp  sensor_event_listener.h  sensor_handle_info.cpp  sensor_handle_info.h  sensor_internal.cpp  sensor_internal.h  sensor_internal_deprecated.h  sensor_listener.cpp  sensor_listener.h  sensor_manager.cpp  sensor_manager.h  sensor_manager_channel_handler.cpp  sensor_manager_channel_handler.h  sensor_manager_handler.cpp  sensor_manager_handler.h  sensor_provider.cpp  sensor_provider.h  sensor_provider_channel_handler.cpp  sensor_provider_channel_handler.h  sensor_provider_handler.cpp  sensor_provider_handler.h  sensor_reader.cpp  sensor_reader.h
src/client-dummy/: CMakeLists.txt  client_dummy.cpp  external_client_dummy.cpp
src/fusion-sensor/: CMakeLists.txt  create.cpp  fusion_util.cpp  fusion_util.h
src/fusion-sensor/auto_rotation/: auto_rotation_alg.cpp  auto_rotation_alg_emul.cpp  auto_rotation_alg_emul.h  auto_rotation_sensor.cpp  auto_rotation_sensor.h
src/fusion-sensor/gesture/: face_down_alg.h  face_down_alg_impl.cpp  face_down_alg_impl.h  face_down_sensor.cpp  face_down_sensor.h  pick_up_sensor.cpp  pick_up_sensor.h
src/fusion-sensor/gravity/: gravity_comp_sensor.cpp  gravity_comp_sensor.h  gravity_lowpass_sensor.cpp  gravity_lowpass_sensor.h
src/fusion-sensor/linear_accel/: linear_accel_sensor.cpp  linear_accel_sensor.h
src/fusion-sensor/orientation/: gyro_orientation_sensor.cpp  gyro_orientation_sensor.h  magnetic_orientation_sensor.cpp  magnetic_orientation_sensor.h  orientation_sensor.cpp
src/fusion-sensor/pedometer/: pedometer.h  timestamp.h  (+8 more)
src/hal/: sensor_hal.h  sensor_hal_types.h
src/physical-sensor/: CMakeLists.txt  create.cpp  macro.h
src/physical-sensor/accel/: accel_sensor.cpp  accel_sensor.h
src/sensor/: CMakeLists.txt  create.cpp
src/sensor/auto_rotation/: auto_rotation_alg.h  auto_rotation_alg_emul.cpp  auto_rotation_alg_emul.h  auto_rotation_sensor.cpp  auto_rotation_sensor.h
src/sensor/gesture/: face_down_alg.h  face_down_alg_impl.cpp  face_down_alg_impl.h  face_down_sensor.cpp  face_down_sensor.h
src/sensor/gravity/: gravity_comp_sensor.cpp  gravity_lowpass_sensor.cpp  gravity_sensor.cpp
src/sensor/linear_accel/: linear_accel_sensor.cpp
src/sensor/orientation/: orientation_sensor.cpp  orientation_sensor.h
src/sensor/pedometer/: average_filter.cpp  average_filter.h  common.h  pedometer.cpp  pedometer.h  pedometer_info.h  pedometer_sensor.cpp  pedometer_sensor.h  pedometer_speed_filter.cpp  pedometer_speed_filter.h  savitzky_golay_filter15.cpp  savitzky_golay_filter15.h  sensor_frequency_compensator.cpp  sensor_frequency_compensator.h  step_detection.cpp  step_detection.h  step_event.h  zero_crossing_step_detection.cpp  zero_crossing_step_detection.h
src/sensor/rotation_vector/: fusion_base.cpp  fusion_base.h  gyro_fusion.cpp  gyro_fusion.h  gyro_magnetic_fusion.h  gyro_rv_sensor.cpp  gyro_rv_sensor.h  magnetic_fusion.h  magnetic_rv_sensor.cpp  magnetic_rv_sensor.h  rv_sensor.cpp  rv_sensor.h
src/sensor/rotation_vector/fusion_utils/: matrix.cpp  orientation_filter.cpp  orientation_filter.h  sensor_data.h
src/sensor/rotation_vector/test/: orientation_sensor.cpp
src/sensor/sensor_fusion/: fusion.h  fusion_base.cpp  fusion_base.h  magnetic_fusion.cpp  sensor_data.cpp
src/sensor/sensorhub/: pedometer_sensor.cpp  pedometer_sensor.h
src/sensorctl/: CMakeLists.txt  dbus_util.cpp  dbus_util.h  info.cpp  info.h  info_manager.cpp  injector.cpp  injector.h  injector_context_orientation.cpp  injector_manager.cpp  injector_wrist_up_algo.cpp  injector_wrist_up_algo.h  injector_wrist_up_conf.cpp  injector_wrist_up_conf.h  log.h  loopback.cpp  loopback.h  loopback_manager.cpp  loopback_manager.h  macro.h  mainloop.cpp  mainloop.h  sensor_adapter.cpp  sensor_adapter.h  sensor_manager.cpp  sensor_manager.h  sensorctl.cpp  test_bench.cpp  test_bench.h  tester.cpp  tester.h  tester_auto.cpp  tester_manager.cpp  tester_manual.cpp  tester_sensor.cpp  util.cpp  util.h
src/server/: CMakeLists.txt  application_sensor_handler.cpp  application_sensor_handler.h  command_worker.cpp  command_worker.h  dbus_listener.cpp  dbus_listener.h  dbus_util.cpp  dbus_util.h  external_sensor_handler.cpp  external_sensor_handler.h  external_sensor_worker.cpp  fusion_sensor_handler.cpp  fusion_sensor_handler.h  main.cpp  permission_checker.cpp  permission_checker.h  physical_sensor.cpp  physical_sensor.h  physical_sensor_handler.cpp  physical_sensor_handler.h  sensor_base.cpp  sensor_base.h  sensor_event_handler.cpp  sensor_event_handler.h  sensor_handler.cpp  sensor_handler.h  sensor_listener_proxy.cpp  sensor_listener_proxy.h  sensor_loader.cpp  sensor_loader.h  sensor_manager.cpp  sensor_manager.h  sensor_observer.h  sensor_policy_listener.h  sensor_policy_monitor.cpp  sensor_policy_monitor.h  sensor_publisher.h  server.cpp  server.h  (+5 more)
src/shared/: CMakeLists.txt  accept_event_handler.cpp  accept_event_handler.h  cbase_lock.cpp  cbase_lock.h  channel.cpp  channel.h  channel_event_handler.cpp  channel_event_handler.h  channel_handler.h  cmutex.cpp  cmutex.h  command_common.h  command_types.h  csocket.cpp  event_handler.h  event_loop.cpp  event_loop.h  ipc_client.cpp  ipc_client.h  ipc_server.cpp  ipc_server.h  macro.h  message.cpp  message.h  sensor_info.cpp  sensor_info.h  sensor_log.cpp  sensor_log.h  sensor_types.cpp  sensor_types.h  sensor_types_private.h  sensor_utils.cpp  sensor_utils.h  seqpacket_socket.cpp  seqpacket_socket.h  socket.cpp  socket.h  stream_socket.cpp  stream_socket.h
(+37 files in other folders)
