CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(sensor CXX)

SET(DEPENDENTS "glib-2.0 gio-2.0 dlog vconf hal-api-common hal-api-sensor")
SET(VERSION ${FULLVER})
SET(PREFIX ${CMAKE_INSTALL_PREFIX})

SET(PC_NAME ${PROJECT_NAME})
SET(PC_DESCRIPTION "Sensor Client library")
SET(PC_INCLUDEDIR "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}/sensor")
SET(PC_REQUIRES "${DEPENDENTS}")
SET(PC_LIBDIR "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}")
SET(PC_LDFLAGS "-l${PROJECT_NAME}")

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(DUMMY_PKGS REQUIRED ${DEPENDENTS})

FOREACH(flag ${DUMMY_PKGS_CFLAGS})
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden -fvisibility-inlines-hidden -g -fPIC")

INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/src/shared
	${CMAKE_CURRENT_SOURCE_DIR}
)

FILE(GLOB_RECURSE SRCS *.cpp)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${DUMMY_PKGS_LDFLAGS})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION ${MAJORVER})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VERSION ${FULLVER})

CONFIGURE_FILE(${PROJECT_NAME}.pc.in ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.pc @ONLY)
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT RuntimeLibraries)
INSTALL(FILES ${PROJECT_NAME}.pc DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
