CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(sensor-genuine CXX)

SET(DEPENDENTS "vconf glib-2.0 gio-2.0 dlog")

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(CLIENT_PKGS REQUIRED ${DEPENDENTS})

FOREACH(flag ${CLIENT_PKGS_CFLAGS})
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden -fvisibility-inlines-hidden -g -fPIC")

INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/src/shared
	${CMAKE_CURRENT_SOURCE_DIR}
)

FILE(GLOB_RECURSE SRCS *.cpp)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CLIENT_PKGS_LDFLAGS} "sensord-shared")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION ${MAJORVER})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VERSION ${FULLVER})

INSTALL(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} NAMELINK_SKIP)
