CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(sensord CXX)

SET(DEPENDENTS "glib-2.0 gio-2.0 dlog libsystemd-daemon cynara-client cynara-creds-socket cynara-session")

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(SERVER_PKGS REQUIRED ${DEPENDENTS})

ADD_DEFINITIONS(${SENSOR_DEFINITIONS})
ADD_DEFINITIONS(-DLIBDIR="${CMAKE_INSTALL_LIBDIR}")

FOREACH(flag ${SERVER_PKGS_CFLAGS})
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIE")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pie")

INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/src/shared
	${CMAKE_SOURCE_DIR}/src/sensor
	${CMAKE_SOURCE_DIR}/src/hal
	${CMAKE_CURRENT_SOURCE_DIR}
)

FILE(GLOB SERVER_SRCS *.cpp)
ADD_EXECUTABLE(${PROJECT_NAME} ${SENSOR_SRCS} ${SERVER_SRCS})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SERVER_PKGS_LDFLAGS} ${CMAKE_DL_LIBS} "sensord-shared")
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_BINDIR})
